--- a/core/templates/non_logged_nav.html
+++ b/core/templates/non_logged_nav.html
@@ -2,12 +2,12 @@
     <nav class="container mx-auto px-6 py-3">
       <div class="flex justify-between items-center">
         <div class="text-xl font-bold text-gray-800">TaskMaster</div>
-        <div class="hidden md:flex space-x-4">
+        {% comment %} <div class="hidden md:flex space-x-4">
           <a href="#" class="text-gray-600 hover:text-gray-800">Features</a>
           <a href="#" class="text-gray-600 hover:text-gray-800">Pricing</a>
           <a href="#" class="text-gray-600 hover:text-gray-800">About</a>
           <a href="#" class="text-gray-600 hover:text-gray-800">Contact</a>
-        </div>
+        </div> {% endcomment %}
         <div class="md:hidden">
           <button
             id="menu-toggle"
