--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -14,7 +14,17 @@
             {% comment %} <br> {% endcomment %}
             <button class='bg-blue-500 px-2 py-1 rounded text-white mt-4' type="submit">Sign In</button>
         </form>
-        <p><a href="{% url 'password-reset' %}">Forgot Password?</a></p>
+        <div class="mt-6 text-center space-y-2">
+            <a href="{% url 'social:begin' 'auth0' %}?next={{ request.GET.next|urlencode }}"
+               class="inline-block w-full text-center bg-blue-100 hover:bg-gray-200 text-gray-800 py-2 px-4 rounded border border-gray-300">
+                Login with Social Accounts
+            </a>
+            <br>
+            <br>
+            <a href="{% url 'password-reset' %}" class="text-sm text-blue-500 hover:underline">
+                Forgot Password?
+            </a>
+        </div>
     </div>
     <br>
 
