--- a/users/templates/accounts/profile.html
+++ b/users/templates/accounts/profile.html
@@ -15,7 +15,7 @@
             class="block py-2 px-4 text-gray-700 bg-gray-200 hover:bg-gray-300"
             >Profile</a
           >
-          <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"
+          <a href="{% url 'edit-profile' %}" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"
             >Edit Profile</a
           >
           <a href="{% url 'password-change' %}" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"
@@ -31,7 +31,7 @@
         <div class="bg-white shadow-md rounded-lg p-6">
           <div class="flex items-center mb-6">
             <img
-              src="https://png.pngtree.com/png-clipart/20231019/original/pngtree-user-profile-avatar-png-image_13369988.png"
+              src="{{profile_image}}"
               alt="User Avatar"
               class="w-24 h-24 rounded-full object-cover mr-6"
             />
@@ -72,9 +72,8 @@
           <div class="mt-6">
             <h3 class="text-lg font-semibold text-gray-700 mb-2">Bio</h3>
             <p class="text-gray-600">
-              Passionate software developer with 5 years of experience in web
-              technologies. Loves to create user-friendly and efficient
-              applications. In free time, enjoys hiking and reading tech blogs.
+              {{bio|default:"No bio available."}}
+            </p>
             {% comment %} <p>{{ 3.14159|round_val:2 }}  </p>            {# 3.14 #}
             <p>{{ 10|add:5 }}    </p>                     {# 15 #}
             <p>{{ 10|subtract:2 }}  </p>                  {# 8 #}
